common/force-app/main/default/objects/VC_Entity__c/VC_Entity__c.object-meta.xml
<CustomObject>
    <description>This object is used in funds management that acts as a Xero account. For example VentureCrowd Nominees.</description>
    <label>VC Entity</label>
    <nameField>
        <label>VC Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VC Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>