common/force-app/main/default/objects/VC_Entity__c/fields/ACN__c.field-meta.xml
<CustomField>
    <fullName>ACN__c</fullName>
    <inlineHelpText>This is the ACN related to the VC Entity Account</inlineHelpText>
    <label>ACN</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>