common/force-app/main/default/objects/VC_Entity__c/fields/Associated_AFSL_License__c.field-meta.xml
<CustomField>
    <fullName>Associated_AFSL_License__c</fullName>
    <inlineHelpText>Which AFSL License does this Entity operate under?</inlineHelpText>
    <label>Associated AFSL License</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Associated_AFSL_License</valueSetName>
    </valueSet>
</CustomField>