common/force-app/main/default/objects/VC_Entity__c/fields/Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Name__c</fullName>
    <label>Bank Account Name</label>
    <type>TextArea</type>
</CustomField>