common/force-app/main/default/objects/VC_Entity__c/fields/BSB_Number__c.field-meta.xml
<CustomField>
    <fullName>BSB_Number__c</fullName>
    <label>BSB Number</label>
    <length>6</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>