common/force-app/main/default/objects/VC_Entity__c/fields/Xero_ID_of_Entity__c.field-meta.xml
<CustomField>
    <fullName>Xero_ID_of_Entity__c</fullName>
    <inlineHelpText>Xero ID of Entity: this field needs to be mapped from the Integration with Xero</inlineHelpText>
    <label>Xero ID of Entity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>